Some fixes and improvement

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	  {
 		 "name": "Shahrad Elahi",
 		 "email": "shahrad@litehex.com",
-		 "role": "lead"
+		 "role": "developer"
 	  }
    ],
    "require": {
