Initialize for adding `multipart` requests and receiving `web_data`

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
    },
    "autoload-dev": {
 	  "psr-4": {
-		 "TelegramBot\\Tests\\Unit\\": "tests/"
+		 "TelegramBot\\Tests\\Unit\\": "tests/Unit/"
 	  }
    }
 }
