--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,12 @@
       "ext-json": "*",
       "ext-curl": "*",
       "ext-mbstring": "*",
-      "psr/log": "^1.1|^2.0|^3.0",
-      "shahradelahi/easy-http": "^v1.1.2"
+      "vlucas/phpdotenv": "^v5.4.1",
+      "shahradelahi/easy-http": "^v1.2.0"
    },
    "require-dev": {
-      "phpunit/phpunit": "^9.5.20"
+      "phpunit/phpunit": "^9.5.20",
+      "psr/log": "^1.1|^2.0|^3.0"
    },
    "autoload": {
       "psr-4": {
@@ -42,5 +43,9 @@
       "psr-4": {
          "TelegramBotTest\\": "tests/"
       }
+   },
+   "scripts": {
+      "install-dependencies": "composer install --prefer-source",
+      "phpunit-test": "vendor/bin/phpunit --colors=always --teamcity --configuration phpunit.xml"
    }
 }
