--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: php-actions/composer@v6
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
