--- a/composer.json
+++ b/composer.json
@@ -1,61 +1,60 @@
 {
-   "name": "telegram-bot-php/core",
-   "description": "A PHP library that makes using Telegram Bot API much easier.",
-   "keywords": [
-      "php",
-      "library",
-      "telegram",
-      "update-handler",
-      "bot",
-      "core"
-   ],
-   "license": "MIT",
-   "homepage": "https://github.com/telegram-bot-php/core",
-   "support": {
-      "issues": "https://github.com/telegram-bot-php/core/issues",
-      "source": "https://github.com/telegram-bot-php/core"
-   },
-   "authors": [
-      {
-         "name": "Shahrad Elahi",
-         "email": "shahrad@litehex.com"
-      },
-      {
-         "name": "LiteHex",
-         "email": "opensource@litehex.com"
-      }
-   ],
-   "minimum-stability": "dev",
-   "prefer-stable": true,
-   "scripts": {
-      "install-dependencies": "composer install --prefer-source",
-      "phpunit-test": "vendor/bin/phpunit --colors=always --configuration phpunit.xml"
-   },
-   "require": {
-      "php": ">=8.0",
-      "ext-curl": "*",
-      "ext-json": "*",
-      "ext-mbstring": "*",
-      "guzzlehttp/guzzle": "^7.8",
-      "symfony/dotenv": "^v6.4"
-   },
-   "require-dev": {
-      "fakerphp/faker": "^1.23",
-      "phpunit/phpunit": "^9.5",
-      "psr/log": "^1.1|^2.0|^3.0"
-   },
-   "autoload": {
-      "psr-4": {
-         "TelegramBot\\": "src/"
-      }
-   },
-   "autoload-dev": {
-      "psr-4": {
-         "TelegramBotTest\\": "tests/"
-      }
-   },
-   "config": {
-      "sort-packages": true,
-      "optimize-autoloader": true
-   }
+    "name": "telegram-bot-php/core",
+    "description": "A PHP library that makes using Telegram Bot API much easier.",
+    "keywords": [
+        "php",
+        "library",
+        "telegram",
+        "update-handler",
+        "bot",
+        "core"
+    ],
+    "license": "MIT",
+    "homepage": "https://github.com/telegram-bot-php/core",
+    "support": {
+        "issues": "https://github.com/telegram-bot-php/core/issues",
+        "source": "https://github.com/telegram-bot-php/core"
+    },
+    "authors": [
+        {
+            "name": "Shahrad Elahi",
+            "email": "shahrad@litehex.com"
+        },
+        {
+            "name": "LiteHex",
+            "email": "opensource@litehex.com"
+        }
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "scripts": {
+        "test": "phpunit --colors=always --configuration phpunit.xml"
+    },
+    "require": {
+        "php": ">=8.2",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "guzzlehttp/guzzle": "^7.8",
+        "symfony/dotenv": "^v7.1"
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.23",
+        "phpunit/phpunit": "^11.2",
+        "psr/log": "^1.1|^2.0|^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "TelegramBot\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TelegramBotTest\\": "tests/"
+        }
+    },
+    "config": {
+        "sort-packages": true,
+        "optimize-autoloader": true
+    }
 }
